contrast issue fix on completed badge

--- a/web-app/aipApp/common/directives/list/css/_list.scss
+++ b/web-app/aipApp/common/directives/list/css/_list.scss
@@ -90,6 +90,8 @@ aip-list {
           .badge {
             //float: right;
             margin-left: 5px;
+            border: 1px solid #222222;
+            background-color: #555555;
             &.pending {
               border: 1px solid #B0ABD0;
               background-color: #DAD5FF;
