--- a/web-app/css/aip-main.css
+++ b/web-app/css/aip-main.css
@@ -1,9 +1,6 @@
 /*******************************************************************************
 Copyright 2017 Ellucian Company L.P. and its affiliates.
 ********************************************************************************/
-/*********************************************************************************
- Copyright 2017 Ellucian Company L.P. and its affiliates.
- **********************************************************************************/
 aip-list .aip-list-container {
   border: none;
   box-shadow: none; }
@@ -56,7 +53,9 @@ aip-list .aip-list-container {
         padding-right: 0;
         padding-left: 16px; }
       aip-list .aip-list-container .panel-heading .panel-title .item-group .badge {
-        margin-left: 5px; }
+        margin-left: 5px;
+        border: 1px solid #222222;
+        background-color: #555555; }
         aip-list .aip-list-container .panel-heading .panel-title .item-group .badge.pending {
           border: 1px solid #B0ABD0;
           background-color: #DAD5FF; }
